--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,17 @@
 /* styles go here */
+
+.fieldset {
+  margin-bottom: 20px;
+}
+
+.input {
+  padding-bottom: 10px;
+}
+
+.fieldset .input:last-child {
+  padding: 0;
+}
+
+button {
+  margin: 10px 0;
+}
